--- a/Musei/src/pages/musei/musei.scss
+++ b/Musei/src/pages/musei/musei.scss
@@ -1,3 +1,28 @@
 page-musei {
-
+	.gridHome {
+		height: 100%;
+		width: 100% !important;
+		padding: 0px;
+	}
+	
+	.rowHome {
+		height: 25%;
+	}
+	
+	.cardHome {
+		margin: 0px;
+		width: 100%;
+		height: 100%;
+	}
+	
+	.card-title {
+		padding: 25% 0;
+		height: 100%;
+		text-align: center;
+		font-size: 18px;
+	}
+	
+	.colHome {
+		padding: 0px;
+	}
 }
