--- a/Musei/src/pages/musei/musei.scss
+++ b/Musei/src/pages/musei/musei.scss
@@ -32,6 +32,11 @@ page-musei {
 	.colHome {
 		padding: 0px;
 	}
+
+	.colHomeYellow {
+		padding: 0px;
+		background-color: yellow;
+	}
 	
 	.back-musei {
 		background-color: transparent;
