--- a/Musei/src/pages/museo/museo.scss
+++ b/Musei/src/pages/museo/museo.scss
@@ -15,4 +15,9 @@ page-museo {
 		background-color: transparent;
 		color: black;
 	}
+
+	.home-button {
+		background-color: transparent;
+		color: black;	
+	}
 }
