--- a/Musei/src/theme/variables.scss
+++ b/Musei/src/theme/variables.scss
@@ -86,3 +86,6 @@ $colors: (
 
 @import "roboto";
 @import "noto-sans";
+$font-family-md-base: "Montserrat";
+$font-family-ios-base: "Montserrat";
+$font-family-wp-base: "Montserrat";
