--- a/Musei/src/app/app.scss
+++ b/Musei/src/app/app.scss
@@ -20,3 +20,15 @@
     top: 0;
     left: 0;
 }
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('subset-Montserrat-Regular.eot');
+    src: url('subset-Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('subset-Montserrat-Regular.woff2') format('woff2'),
+        url('subset-Montserrat-Regular.woff') format('woff'),
+        url('subset-Montserrat-Regular.ttf') format('truetype'),
+        url('subset-Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
