--- a/Musei/src/pages/musei/musei.scss
+++ b/Musei/src/pages/musei/musei.scss
@@ -4,42 +4,100 @@ page-musei {
 		width: 100% !important;
 		padding: 0px;
 	}
-	
+
 	.rowHome {
 		height: 25%;
 	}
-	
+
 	.cardHome {
 		margin: 0px;
 		width: 100%;
 		height: 100%;
 	}
-	
+
 	.card-title {
 		padding: 20% 0;
 		height: 100%;
 		text-align: center;
-		font-size: 18px;
+		font-size: 16px;
+    font-weight: 700;
+		text-transform: uppercase;
+		color: white;
 	}
-	
+
 	.card-title-home {
 		padding: 10% 0;
 		height: 100%;
 		text-align: center;
 		font-size: 18px;
 	}
-	
+
+	.col {
+		padding: 0px;
+	}
+
 	.colHome {
 		padding: 0px;
 	}
 
-	.colHomeYellow {
-		padding: 0px;
-		background-color: yellow;
-	}
-	
+	//.colHomeYellow {
+	//	padding: 0px;
+	//	background-color: yellow;
+	//}
+
 	.back-musei {
 		background-color: transparent;
-		color: black;
+		color: white;
+		float: left;
+		position: absolute;
 	}
+
+	#row-1 .cardHome {
+		background-color: yellow;
+	}
+
+	#row-2 .cardHome {
+		background-color: blue;
+	}
+
+	#row-3 .cardHome {
+		background-color: red;
+	}
+
+	#row-4 .cardHome {
+		background-color: green;
+	}
+
+	.area_artemoderna #row-1 {
+		background-image: url("../assets/imgs/home/ArteModerna/mambo.jpg");
+		background-size: cover;
+	}
+
+	.area_artemoderna #row-2 {
+		background-image: url("../assets/imgs/home/ArteModerna/villadellerose.jpg");
+		background-size: cover;
+	}
+
+	.area_artemoderna #row-3 {
+		background-image: url("../assets/imgs/home/ArteModerna/ustica.jpg");
+		background-size: cover;
+	}
+
+	.area_artemoderna #row-4 {
+		background-image: url("../assets/imgs/home/ArteModerna/casamorandi.jpg");
+		background-size: cover;
+	}
+
+	.area_artemoderna #row-1 .cardHome,  .area_artemoderna #row-2 .cardHome, .area_artemoderna #row-3 .cardHome, .area_artemoderna #row-4 .cardHome {
+		background: none !important;
+		border: 5px solid white;
+		border-radius: 0;
+	}
+
+	.area_artemoderna .col {
+		background-image: linear-gradient(to top right, rgba(208,47,124,0.7), rgba(252,103,103,0.7));
+	}
+
+
+
 }
