--- a/Musei/src/pages/museo/museo.scss
+++ b/Musei/src/pages/museo/museo.scss
@@ -1,25 +1,73 @@
 page-museo {
+
 	.cardHome {
 		margin: 0px;
 		width: 100%;
 		height: 100%;
+		border-radius: 0;
 	}
-	
+
 	.card-title {
 		height: 100%;
 		text-align: center;
 		font-size: 18px;
 	}
-	
+
 	.sideMenu {
 		background-color: transparent;
-		color: black;
+		color: white;
 	}
 
 	.home-button {
 		background-color: transparent;
-		color: black;
+		color: white;
 		margin: 0 2%;
-		float: right;	
+		float: right;
 	}
+
+	.museo_mambo .card-title {
+		color: white;
+		text-transform: uppercase;
+		text-align: left;
+		font-size: 16px;
+    font-weight: 700;
+		border-left: 1px white solid;
+		margin-left: 10px;
+		margin-right: 10px;
+		padding-left: 10px;
+		padding-right: 10px;
+		position: absolute;
+		top: 48%;
+		height: 48%;
+	}
+
+	.museo-content {
+		display: none;
+	}
+
+	.museo_mambo .museo-content {
+		display: block;
+		padding-top: 20%;
+	}
+
+	.museo_mambo .museo-content p {
+		font-size: 10px !important;
+    font-weight: 600;
+    color: white;
+		text-align: justify;
+	}
+
+
+	#paginaMuseo.museo_mambo {
+		background-image: url("../assets/imgs/home/ArteModerna/MamboHome/mambohome.jpg");
+		background-size: cover;
+	}
+
+	.museo_mambo .cardHome {
+		background-color: transparent !important;
+		background-image: linear-gradient(to top right, rgba(208,47,124,0.7), rgba(252,103,103,0.7)) !important;
+	}
+
+
+
 }
