Font not Fixed at all

--- a/Musei/src/app/app.scss
+++ b/Musei/src/app/app.scss
@@ -49,6 +49,7 @@
     color: white;
     font-size: 16px;
     font-weight: 700;
+    text-transform: uppercase;
   }
 
   .item-block .item-inner, .toolbar-background, .item-block:last-child  {
