--- a/Musei/src/theme/variables.scss
+++ b/Musei/src/theme/variables.scss
@@ -84,9 +84,62 @@ $colors: (
 // Fonts
 // --------------------------------------------------
 
-@import "roboto";
-@import "noto-sans";
+//@import "roboto";
+//@import "noto-sans";
 
-$font-family-md-base: "Montserrat";
-$font-family-ios-base: "Montserrat";
-$font-family-wp-base: "Montserrat";
+$font-family-base: "Montserrat", sans-serif;
+$font-family-md-base: "Montserrat", sans-serif;
+$font-family-ios-base: "Montserrat", sans-serif;
+$font-family-wp-base: "Montserrat", sans-serif;
+
+@font-face {
+    font-family: 'Montserrat', sans-serif;
+    src: url('../assets/fonts/subset-Montserrat-Light.eot');
+    src: url('../assets/fonts/subset-Montserrat-Light.eot?#iefix') format('embedded-opentype'),
+        url('../assets/fonts/subset-Montserrat-Light.woff2') format('woff2'),
+        url('../assets/fonts/subset-Montserrat-Light.woff') format('woff'),
+        url('../assets/fonts/subset-Montserrat-Light.ttf') format('truetype'),
+        url('../assets/fonts/subset-Montserrat-Light.svg#Montserrat-Light') format('svg');
+    font-weight: light;
+    font-style: 300;
+}
+
+@font-face {
+    font-family: 'Montserrat', sans-serif;
+    src: url('../assets/fonts/subset-Montserrat-Regular.eot');
+    src: url('../assets/fonts/subset-Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../assets/fonts/subset-Montserrat-Regular.woff2') format('woff2'),
+        url('../assets/fonts/subset-Montserrat-Regular.woff') format('woff'),
+        url('../assets/fonts/subset-Montserrat-Regular.ttf') format('truetype'),
+        url('../assets/fonts/subset-Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+    font-weight: normal;
+    font-style: 400;
+}
+
+@font-face {
+    font-family: 'Montserrat', sans-serif;
+    src: url('../assets/fonts/subset-Montserrat-Bold.eot');
+    src: url('../assets/fonts/subset-Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../assets/fonts/subset-Montserrat-Bold.woff2') format('woff2'),
+        url('../assets/fonts/subset-Montserrat-Bold.woff') format('woff'),
+        url('../assets/fonts/subset-Montserrat-Bold.ttf') format('truetype'),
+        url('../assets/fonts/subset-Montserrat-Bold.svg#Montserrat-Bold') format('svg');
+    font-weight: bold;
+    font-style: 700;
+}
+
+@font-face {
+    font-family: 'Montserrat', sans-serif;
+    src: url('../assets/fonts/subset-Montserrat-ExtraBold.eot');
+    src: url('../assets/fonts/subset-Montserrat-ExtraBold.eot?#iefix') format('embedded-opentype'),
+        url('../assets/fonts/subset-Montserrat-ExtraBold.woff2') format('woff2'),
+        url('../assets/fonts/subset-Montserrat-ExtraBold.woff') format('woff'),
+        url('../assets/fonts/subset-Montserrat-ExtraBold.ttf') format('truetype'),
+        url('../assets/fonts/subset-Montserrat-ExtraBold.svg#Montserrat-ExtraBold') format('svg');
+    font-weight: extra-bold;
+    font-style: 800;
+}
+
+body {
+  font-family: "Montserrat" !important;
+}
