--- a/Musei/src/theme/variables.scss
+++ b/Musei/src/theme/variables.scss
@@ -100,7 +100,7 @@ $font-family-wp-base: "Montserrat", sans-serif;
         url('../assets/fonts/subset-Montserrat-Light.woff') format('woff'),
         url('../assets/fonts/subset-Montserrat-Light.ttf') format('truetype'),
         url('../assets/fonts/subset-Montserrat-Light.svg#Montserrat-Light') format('svg');
-    font-weight: light;
+    font-weight: normal;
     font-style: 300;
 }
 
@@ -136,7 +136,7 @@ $font-family-wp-base: "Montserrat", sans-serif;
         url('../assets/fonts/subset-Montserrat-ExtraBold.woff') format('woff'),
         url('../assets/fonts/subset-Montserrat-ExtraBold.ttf') format('truetype'),
         url('../assets/fonts/subset-Montserrat-ExtraBold.svg#Montserrat-ExtraBold') format('svg');
-    font-weight: extra-bold;
+    font-weight: bold;
     font-style: 800;
 }
 
