--- a/Musei/src/pages/museo/museo.scss
+++ b/Musei/src/pages/museo/museo.scss
@@ -23,6 +23,11 @@ page-museo {
 		color: white;
 		margin: 0 2%;
 		float: right;
+	}
+
+	.vocal-button {
+		background-color: transparent;
+		color: white;
   }
 
   .museo-content {
