--- a/Musei/src/pages/home/home.scss
+++ b/Musei/src/pages/home/home.scss
@@ -1,9 +1,10 @@
 
 
 page-home {
-  .spinnerCaricamento {
+  /*.spinnerCaricamento {
     background: none;
   }
+*/
 
 	.gridHome {
 		height: 100%;
