Gestione Pagina Content e Gestione Font
Creata la pagina base per i contenuti e sistemato il caricamento del font personalizzato

--- a/Musei/src/pages/musei/musei.scss
+++ b/Musei/src/pages/musei/musei.scss
@@ -43,7 +43,11 @@ page-musei {
 	//.colHomeYellow {
 	//	padding: 0px;
 	//	background-color: yellow;
-	//}
+  //}
+
+  .button-md {
+    box-shadow: none !important;
+  }
 
 	.back-musei {
 		background-color: transparent;
