--- a/Musei/src/pages/museo/museo.scss
+++ b/Musei/src/pages/museo/museo.scss
@@ -23,7 +23,12 @@ page-museo {
 		color: white;
 		margin: 0 2%;
 		float: right;
-	}
+  }
+
+  .button-md {
+    box-shadow: none !important;
+  }
+
 
 	.vocal-button {
 		background-color: transparent;
