--- a/Musei/src/app/app.scss
+++ b/Musei/src/app/app.scss
@@ -23,14 +23,62 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('subset-Montserrat-Regular.eot');
-    src: url('subset-Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-        url('subset-Montserrat-Regular.woff2') format('woff2'),
-        url('subset-Montserrat-Regular.woff') format('woff'),
-        url('subset-Montserrat-Regular.ttf') format('truetype'),
-        url('subset-Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+    src: url('../assets/fonts/subset-Montserrat-Regular.eot');
+    src: url('../assets/fonts/subset-Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../assets/fonts/subset-Montserrat-Regular.woff2') format('woff2'),
+        url('../assets/fonts/subset-Montserrat-Regular.woff') format('woff'),
+        url('../assets/fonts/subset-Montserrat-Regular.ttf') format('truetype'),
+        url('../assets/fonts/subset-Montserrat-Regular.svg#Montserrat-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/subset-Montserrat-Light.eot');
+  src: url('../assets/fonts/subset-Montserrat-Light.eot?#iefix') format('embedded-opentype'),
+      url('../assets/fonts/subset-Montserrat-Light.woff2') format('woff2'),
+      url('../assets/fonts/subset-Montserrat-Light.woff') format('woff'),
+      url('../assets/fonts/subset-Montserrat-Light.ttf') format('truetype'),
+      url('../assets/fonts/subset-Montserrat-Light.svg#Montserrat-Light') format('svg');
+  font-weight: normal;
+  font-style: 300;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/subset-Montserrat-Regular.eot');
+  src: url('../assets/fonts/subset-Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+      url('../assets/fonts/subset-Montserrat-Regular.woff2') format('woff2'),
+      url('../assets/fonts/subset-Montserrat-Regular.woff') format('woff'),
+      url('../assets/fonts/subset-Montserrat-Regular.ttf') format('truetype'),
+      url('../assets/fonts/subset-Montserrat-Regular.svg#Montserrat-Regular') format('svg');
+  font-weight: normal;
+  font-style: 400;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/subset-Montserrat-Bold.eot');
+  src: url('../assets/fonts/subset-Montserrat-Bold.eot?#iefix') format('embedded-opentype'),
+      url('../assets/fonts/subset-Montserrat-Bold.woff2') format('woff2'),
+      url('../assets/fonts/subset-Montserrat-Bold.woff') format('woff'),
+      url('../assets/fonts/subset-Montserrat-Bold.ttf') format('truetype'),
+      url('../assets/fonts/subset-Montserrat-Bold.svg#Montserrat-Bold') format('svg');
+  font-weight: bold;
+  font-style: 700;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('../assets/fonts/subset-Montserrat-ExtraBold.eot');
+  src: url('../assets/fonts/subset-Montserrat-ExtraBold.eot?#iefix') format('embedded-opentype'),
+      url('../assets/fonts/subset-Montserrat-ExtraBold.woff2') format('woff2'),
+      url('../assets/fonts/subset-Montserrat-ExtraBold.woff') format('woff'),
+      url('../assets/fonts/subset-Montserrat-ExtraBold.ttf') format('truetype'),
+      url('../assets/fonts/subset-Montserrat-ExtraBold.svg#Montserrat-ExtraBold') format('svg');
+  font-weight: bold;
+  font-style: 800;
 }
 
   .menu-content-reveal {
