Finita Come raggiungerci

--- a/Musei/src/pages/mm-come-raggiungerci/mm-come-raggiungerci.scss
+++ b/Musei/src/pages/mm-come-raggiungerci/mm-come-raggiungerci.scss
@@ -88,4 +88,8 @@ page-mm-come-raggiungerci {
         font-weight: 600 !important;
         text-transform: uppercase;
     }
+
+    #portami-button {
+      background-image: linear-gradient(to top right, rgba(91,73,137,0.7), rgba(225,0,255,0.7));
+    }
 }
