--- a/Musei/src/pages/home/home.scss
+++ b/Musei/src/pages/home/home.scss
@@ -1,5 +1,3 @@
-
-
 page-home {
   /*.spinnerCaricamento {
     background: none;
@@ -75,6 +73,16 @@ page-home {
     font-weight: 700;
     color: white;
     text-transform: uppercase;
+	}
+
+	#open-menu {
+		width: 0;
+		height: 100%;
+		border-top: 5vw solid transparent;
+		border-left: 4vw solid rgba(255,255,255,0.5);
+		border-bottom: 5vw solid transparent;
+		position: absolute;
+		z-index: 10;
 	}
 
 	#card-artemoderna .card-gradient {
