--- a/Musei/src/pages/mm-percorsi-a-tema/mm-percorsi-a-tema.scss
+++ b/Musei/src/pages/mm-percorsi-a-tema/mm-percorsi-a-tema.scss
@@ -110,12 +110,13 @@ div.slide-zoom {
   padding: 10px 10px 20px;
 }
 
-ion-card #slideCard-*{
-  margin-bottom: 30px !important;
-}
+// ion-card #slideCard-*{
+//   margin-bottom: 30px !important;
+// }
 
 #contenuto ion-card{
  margin-bottom: 30px !important;
+ transition: height 0.5s;
 }
 
 .contentSlide p{
@@ -127,6 +128,29 @@ ion-card #slideCard-*{
   padding-top: 10px;
   float: left;
   margin-right: 10px;
+}
+
+/* Style the header: fixed position (always stay at the top) */
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: #4caf50;
+  width: 0%;
 }
 
 
