transition Slide con webkit

--- a/Musei/src/pages/mm-percorsi-a-tema/mm-percorsi-a-tema.scss
+++ b/Musei/src/pages/mm-percorsi-a-tema/mm-percorsi-a-tema.scss
@@ -116,6 +116,7 @@ div.slide-zoom {
 
 #contenuto ion-card{
  margin-bottom: 30px !important;
+ -webkit-transition: height 0.5s;
  transition: height 0.5s;
 }
 
