Caratteri responsive (prima parte)

--- a/Musei/src/pages/menu/menu.scss
+++ b/Musei/src/pages/menu/menu.scss
@@ -11,4 +11,12 @@ page-menu {
       overflow: auto;
     }
 
+    .size-button {
+      font-size: 3.5vw;
+    }
+
+    .toolbar-title-ios, .toolbar-title-md, .toolbar-title-wp { 
+      font-size: 4vw;
+    }
+
 }
