--- a/Musei/src/pages/home/home.scss
+++ b/Musei/src/pages/home/home.scss
@@ -24,7 +24,7 @@ page-home {
 		padding: 50% 0;
 		height: 100%;
 		text-align: center;
-		font-size: 18px;
+		font-size: 4vw;
 	}
 
 	.colHome {
@@ -67,9 +67,9 @@ page-home {
 
 	.card-title {
     text-align: left;
-    padding: 50% 5px;
+    padding: 45% 5px;
     height: 100%;
-    font-size: 16px;
+    font-size: 4vw;
     font-weight: 700;
     color: white;
     text-transform: uppercase;
