--- a/Musei/src/pages/mm-biglietti/mm-biglietti.scss
+++ b/Musei/src/pages/mm-biglietti/mm-biglietti.scss
@@ -11,20 +11,39 @@ page-mm-biglietti {
 
   .sideMenu {
 		background-color: transparent;
-		color: white;
-	}
+    color: white;
+    height: 20%;
+  }
+  
+  #menu {
+    font-size: 7vw;
+  }
 
 	.home-button {
 		background-color: transparent;
 		color: white;
 		margin: 0 2%;
-		float: right;
-	}
+    float: right;
+    height: 20%;
+  }
+  
+  #home-icon {
+    font-size: 7vw;
+  }
 
 	.vocal-button {
 		background-color: transparent;
-		color: white;
+    color: white;
+    height: 20%;
   }
+
+  #vocal {
+		font-size: 7vw;
+	}
+
+	#vocal-off {
+		font-size: 7vw;
+	}
 
   .museo-content {
 		display: none;
@@ -36,7 +55,7 @@ page-mm-biglietti {
 
   .card-title {
     font-family: 'Montserrat';
-    font-size: 20px;
+    font-size: 5.5vw;
     font-weight: 600;
     color: white;
     text-align: center;
@@ -50,8 +69,8 @@ page-mm-biglietti {
     font-family: 'Amiri';
     text-transform: uppercase;
     text-align: center;
-    font-size: 12px;
-    width: 200px;
+    font-size: 3vw;
+    width: 50vw;
     margin: auto;
     line-height: 1em;
 }
@@ -73,6 +92,7 @@ page-mm-biglietti {
 
 #contenuto {
   text-align: justify;
+  font-size: 3.5vw;
 }
 
 #paginaMmBiglietti.museo_musica {
@@ -87,6 +107,11 @@ page-mm-biglietti {
     -webkit-background-clip: text;
     font-weight: 600 !important;
     text-transform: uppercase;
+    font-size: 4vw;
+}
+
+.card-ios p, .card-md p, .card-wp p {
+  font-size: 3.5vw;
 }
 
 
