--- a/Musei/src/pages/mm-percorsi-a-tema/mm-percorsi-a-tema.scss
+++ b/Musei/src/pages/mm-percorsi-a-tema/mm-percorsi-a-tema.scss
@@ -11,19 +11,38 @@ page-mm-percorsi-a-tema {
 
   .sideMenu {
 		background-color: transparent;
-		color: white;
-	}
+    color: white;
+    height: 20%;
+  }
+  
+  #menu {
+    font-size: 7vw;
+  }
 
 	.home-button {
 		background-color: transparent;
 		color: white;
 		margin: 0 2%;
-		float: right;
-	}
+    float: right;
+    height: 20%;
+  }
+  
+  #home-icon {
+    font-size: 7vw;
+  }
 
 	.vocal-button {
 		background-color: transparent;
-		color: white;
+    color: white;
+    height: 20%;
+  }
+
+  #vocal {
+    font-size: 7vw;
+  }
+
+  #vocal-off {
+    font-size: 7vw;
   }
 
   .museo-content {
@@ -36,13 +55,13 @@ page-mm-percorsi-a-tema {
 
   .card-title {
     font-family: 'Montserrat';
-    font-size: 20px;
+    font-size: 5.5vw;
     font-weight: 600;
     color: white;
     text-align: center;
     margin: 10% auto 5px auto;
     border-bottom: 1px solid white;
-    width: 50%;
+    width: 70%;
   }
 
   .card-subtitle {
@@ -50,8 +69,8 @@ page-mm-percorsi-a-tema {
     font-family: 'Amiri';
     text-transform: uppercase;
     text-align: center;
-    font-size: 12px;
-    width: 200px;
+    font-size: 3vw;
+    width: 70vw;
     margin: auto;
     line-height: 1em;
 }
@@ -69,10 +88,12 @@ page-mm-percorsi-a-tema {
 
 #container-contenuto {
   overflow: auto;
+  font-size: 3.5vw;
 }
 
 #contenuto {
   text-align: justify;
+  font-size: 3.5vw;
 }
 
 #paginaMmPercorsiATema.museo_musica {
@@ -88,6 +109,16 @@ page-mm-percorsi-a-tema {
   font-weight: 600 !important;
   text-transform: uppercase;
   padding-bottom: 10px;
+  font-size: 4vw;
+}
+
+.card-ios p, .card-md p, .card-wp p {
+  font-size: 3.5vw;
+}
+
+.card-ios h3, .card-md h3,  .card-wp h3 {
+  font-size: 3vw;
+  font-weight: bold;
 }
 
 .sala {
@@ -123,6 +154,7 @@ div.slide-zoom {
 .contentSlide p{
   text-align: justify;
   padding: 10px 0;
+  font-size: 3.5vw;
 }
 
 .contentSlide img{
