--- a/Musei/src/app/app.html
+++ b/Musei/src/app/app.html
@@ -1,30 +1,30 @@
 <ion-menu [content]="mycontent" id="menuPrincipale">
-    <ion-header>
-        <ion-toolbar>
-            <ion-title>Menu</ion-title>
+    <ion-header class="size-button">
+        <ion-toolbar class="size-button">
+            <ion-title class="size-button">MENU</ion-title>
         </ion-toolbar>
     </ion-header>
     <ion-content>
         <ion-list>
-            <button ion-item (click)="onLoad('LoginService')">
+            <button class="size-button" ion-item (click)="onLoad('LoginService')">
                 <ion-icon name="contact" item-left></ion-icon>
                 Login
             </button>
-            <button ion-item (click)="onLoad('InformazioniGeneraliService')">
+            <button class="size-button" ion-item (click)="onLoad('InformazioniGeneraliService')">
                 <ion-icon name="information-circle" item-left></ion-icon>
                 Informazioni generali
             </button>
-            <button ion-item (click)="onLoad('AreeMusealiService')">
+            <button class="size-button" ion-item (click)="onLoad('AreeMusealiService')">
                 <ion-icon name="list-box" item-left></ion-icon>
-                Le Aree Museali
+                Aree Museali
             </button>            
-            <button ion-item (click)="onLoad('ContattiGeneraliService')">
+            <button class="size-button" ion-item (click)="onLoad('ContattiGeneraliService')">
                 <ion-icon name="chatbubbles" item-left></ion-icon>
                 Contatti
             </button>
-            <button ion-item (click)="onLoad('MuseoPiuVicinoService')">
+            <button class="size-button" ion-item (click)="onLoad('MuseoPiuVicinoService')">
                 <ion-icon name="walk" item-left></ion-icon>
-                Il museo più vicino a te
+                Museo più vicino a te
             </button>      
         </ion-list>
     </ion-content>
