--- a/Musei/src/pages/mm-sale-espositive/mm-sale-espositive.scss
+++ b/Musei/src/pages/mm-sale-espositive/mm-sale-espositive.scss
@@ -11,19 +11,38 @@ page-mm-sale-espositive {
 
   .sideMenu {
 		background-color: transparent;
-		color: white;
-	}
+    color: white;
+    height: 20%;
+  }
+  
+  #menu {
+    font-size: 7vw;
+  }
 
 	.home-button {
 		background-color: transparent;
 		color: white;
 		margin: 0 2%;
-		float: right;
+    float: right;
+    height: 20%;
 	}
+
+  #home-icon {
+    font-size: 7vw;
+  }
 
 	.vocal-button {
 		background-color: transparent;
-		color: white;
+    color: white;
+    height: 20%;
+  }
+
+  #vocal {
+    font-size: 7vw;
+  }
+
+  #vocal-off {
+    font-size: 7vw;
   }
 
   .museo-content {
@@ -36,13 +55,13 @@ page-mm-sale-espositive {
 
   .card-title {
     font-family: 'Montserrat';
-    font-size: 20px;
+    font-size: 5.5vw;
     font-weight: 600;
     color: white;
     text-align: center;
     margin: 10% auto 5px auto;
     border-bottom: 1px solid white;
-    width: 50%;
+    width: 70%;
   }
 
   .card-subtitle {
@@ -50,12 +69,19 @@ page-mm-sale-espositive {
     font-family: 'Amiri';
     text-transform: uppercase;
     text-align: center;
-    font-size: 12px;
-    width: 200px;
+    font-size: 3vw;
+    width: 70vw;
     margin: auto;
     line-height: 1em;
 }
 
+.card-ios p, .card-md p, .card-wp p {
+  font-size: 3.5vw;
+}
+
+.card-ios h3, .card-ios h4, .card-ios h5, .card-ios h6, .card-md h3, .card-md h4, .card-md h5, .card-md h6, .card-wp h3, .card-wp h4, .card-wp h5, .card-wp h6 {
+  font-size: 3.5vw;
+}
 
 .container-content {
   width: 100%;
@@ -69,10 +95,12 @@ page-mm-sale-espositive {
 
 #container-contenuto {
   overflow: auto;
+  font-size: 3.5vw;
 }
 
 #contenuto {
   text-align: justify;
+  font-size: 3.5vw;
 }
 
 #paginaMmSaleEspositive.museo_musica {
@@ -88,6 +116,7 @@ page-mm-sale-espositive {
     font-weight: 600 !important;
     text-transform: uppercase;
     padding-bottom: 10px;
+    font-size: 3.5vw;
 }
 
 .sala {
