--- a/Musei/src/pages/mp-contatti/mp-contatti.scss
+++ b/Musei/src/pages/mp-contatti/mp-contatti.scss
@@ -14,11 +14,25 @@ page-mp-contatti {
         color: white;
         margin: 0 2%;
         float: right;
+        height: 20%;
+    }
+
+    #home-icon {
+      font-size: 7vw;
     }
   
     .vocal-button {
         background-color: transparent;
         color: white;
+        height: 20%;
+    }
+
+    #vocal {
+      font-size: 7vw;
+    }
+
+    #vocal-off {
+      font-size: 7vw;
     }
   
     .museo-content {
@@ -31,7 +45,7 @@ page-mp-contatti {
   
     .card-title {
       font-family: 'Montserrat';
-      font-size: 20px;
+      font-size: 5.5vw;
       font-weight: 600;
       color: white;
       text-align: center;
@@ -45,8 +59,8 @@ page-mp-contatti {
       font-family: 'Amiri';
       text-transform: uppercase;
       text-align: center;
-      font-size: 12px;
-      width: 200px;
+      font-size: 3vw;
+      width: 50vw;
       margin: auto;
       line-height: 1em;
   }
@@ -76,6 +90,11 @@ page-mp-contatti {
       -webkit-background-clip: text;
       font-weight: 600 !important;
       text-transform: uppercase;
+      font-size: 4vw;
+  }
+
+  .card-ios p, .card-md p, .card-wp p {
+    font-size: 3.5vw;
   }
 
 }
