--- a/Musei/src/pages/mp-informazioni-generali/mp-informazioni-generali.scss
+++ b/Musei/src/pages/mp-informazioni-generali/mp-informazioni-generali.scss
@@ -14,11 +14,25 @@ page-mp-informazioni-generali {
         color: white;
         margin: 0 2%;
         float: right;
+        height: 20%;
+    }
+
+    #home-icon {
+      font-size: 7vw;
     }
   
     .vocal-button {
         background-color: transparent;
         color: white;
+        height: 20%;
+    }
+
+    #vocal {
+      font-size: 7vw;
+    }
+
+    #vocal-off {
+      font-size: 7vw;
     }
   
     .museo-content {
@@ -31,13 +45,13 @@ page-mp-informazioni-generali {
   
     .card-title {
       font-family: 'Montserrat';
-      font-size: 20px;
+      font-size: 5.5vw;
       font-weight: 600;
       color: white;
       text-align: center;
       margin: 10% auto 5px auto;
       border-bottom: 1px solid white;
-      width: 50%;
+      width: 80%;
     }
   
     .card-subtitle {
@@ -45,8 +59,8 @@ page-mp-informazioni-generali {
       font-family: 'Amiri';
       text-transform: uppercase;
       text-align: center;
-      font-size: 12px;
-      width: 200px;
+      font-size: 3vw;
+      width: 50vw;
       margin: auto;
       line-height: 1em;
   }
@@ -64,10 +78,12 @@ page-mp-informazioni-generali {
   
   #container-contenuto {
     overflow: auto;
+    font-size: 3.5vw;
   }
   
   #contenuto {
     text-align: justify;
+    font-size: 3.5vw;
   }
   
   #contenuto h4 {
@@ -76,7 +92,15 @@ page-mp-informazioni-generali {
       -webkit-background-clip: text;
       font-weight: 600 !important;
       text-transform: uppercase;
+      font-size: 3.5vw;
   }
 
+  .card-ios p, .card-md p, .card-wp p {
+    font-size: 3.5vw;
+  }
+  
+  .card-ios h3, .card-ios h4, .card-ios h5, .card-ios h6, .card-md h3, .card-md h4, .card-md h5, .card-md h6, .card-wp h3, .card-wp h4, .card-wp h5, .card-wp h6 {
+    font-size: 3.5vw;
+  }
 }
   
