--- a/Musei/src/pages/musei/musei.scss
+++ b/Musei/src/pages/musei/musei.scss
@@ -16,11 +16,11 @@ page-musei {
 	}
 
 	.card-title {
-		padding: 20% 0;
+		padding: 17.5vw 0;
 		height: 100%;
 		text-align: center;
-		font-size: 16px;
-    font-weight: 700;
+		font-size: 4vw;
+    	font-weight: 700;
 		text-transform: uppercase;
 		color: white;
 	}
@@ -54,6 +54,11 @@ page-musei {
 		color: white;
 		float: left;
 		position: absolute;
+		height: 30%;
+	}
+
+	#arrow {
+		font-size: 7vw;
 	}
 
 	#row-1 .cardHome {
