Correzioni Menù Principale
Linea richiamo menù e Loop color gradient

--- a/Musei/src/app/app.html
+++ b/Musei/src/app/app.html
@@ -1,31 +1,31 @@
 <ion-menu [content]="mycontent" id="menuPrincipale">
     <ion-header class="size-button">
         <ion-toolbar class="size-button">
-            <ion-title class="size-button">MENU</ion-title>
+            <ion-title class="size-button gradientLoop">MENU</ion-title>
         </ion-toolbar>
     </ion-header>
     <ion-content>
         <ion-list>
-            <button class="size-button" ion-item (click)="onLoad('LoginService')">
+            <button class="size-button gradientLoop" ion-item (click)="onLoad('LoginService')">
                 <ion-icon name="contact" item-left></ion-icon>
                 Login
             </button>
-            <button class="size-button" ion-item (click)="onLoad('InformazioniGeneraliService')">
+            <button class="size-button gradientLoop" ion-item (click)="onLoad('InformazioniGeneraliService')">
                 <ion-icon name="information-circle" item-left></ion-icon>
                 Informazioni generali
             </button>
-            <button class="size-button" ion-item (click)="onLoad('AreeMusealiService')">
+            <button class="size-button gradientLoop" ion-item (click)="onLoad('AreeMusealiService')">
                 <ion-icon name="list-box" item-left></ion-icon>
                 Aree Museali
-            </button>            
-            <button class="size-button" ion-item (click)="onLoad('ContattiGeneraliService')">
+            </button>
+            <button class="size-button gradientLoop" ion-item (click)="onLoad('ContattiGeneraliService')">
                 <ion-icon name="chatbubbles" item-left></ion-icon>
                 Contatti
             </button>
-            <button class="size-button" ion-item (click)="onLoad('MuseoPiuVicinoService')">
+            <button class="size-button gradientLoop" ion-item (click)="onLoad('MuseoPiuVicinoService')">
                 <ion-icon name="walk" item-left></ion-icon>
                 Museo più vicino a te
-            </button>      
+            </button>
         </ion-list>
     </ion-content>
 </ion-menu>
