--- a/Musei/src/pages/home/home.scss
+++ b/Musei/src/pages/home/home.scss
@@ -66,7 +66,7 @@ page-home {
 	}
 
 	.card-title {
-    text-align: left;
+    text-align: right;
     padding: 45% 5px;
     height: 100%;
     font-size: 4vw;
@@ -76,13 +76,18 @@ page-home {
 	}
 
 	#open-menu {
-		width: 0;
-		height: 100%;
-		border-top: 5vw solid transparent;
-		border-left: 4vw solid rgba(255,255,255,0.5);
-		border-bottom: 5vw solid transparent;
-		position: absolute;
-		z-index: 10;
+    width: 0px;
+    height: 50%;
+    /* border-top: 5vw solid transparent; */
+    /* border-left: 4vw solid rgba(255, 255, 255, 0.5); */
+    /* border-bottom: 5vw solid transparent; */
+    position: absolute;
+    top: 25%;
+    z-index: 10;
+    border: 2px solid white;
+    margin-left: 2px;
+    /* border-bottom: none; */
+    border-radius: 5px;
 	}
 
 	#card-artemoderna .card-gradient {
