--- a/Musei/src/pages/menu/menu.scss
+++ b/Musei/src/pages/menu/menu.scss
@@ -15,8 +15,11 @@ page-menu {
       font-size: 3.5vw;
     }
 
-    .toolbar-title-ios, .toolbar-title-md, .toolbar-title-wp { 
+    .toolbar-title-ios, .toolbar-title-md, .toolbar-title-wp {
       font-size: 4vw;
     }
 
+    .bar-button {
+      color: black;
+  }
 }
