--- a/Musei/src/pages/home/home.scss
+++ b/Musei/src/pages/home/home.scss
@@ -17,7 +17,8 @@ page-home {
 	.cardHome {
 		margin: 0px;
 		width: 100%;
-		height: 100%;
+    height: 100%;
+    border-radius: 0px;
 	}
 
 	.card-title {
@@ -76,7 +77,7 @@ page-home {
 	}
 
 	#open-menu {
-    width: 0px;
+    width: 34px;
     height: 50%;
     /* border-top: 5vw solid transparent; */
     /* border-left: 4vw solid rgba(255, 255, 255, 0.5); */
@@ -84,11 +85,24 @@ page-home {
     position: absolute;
     top: 25%;
     z-index: 10;
-    border: 2px solid white;
-    margin-left: 2px;
+    //border: 2px solid rgba(255,255,255,0.7);
+    margin-left: -15px;
     /* border-bottom: none; */
-    border-radius: 5px;
-	}
+    border-radius: 20px;
+    box-shadow: -3px 0 2px rgba(0,0,0,0.2);
+    background: rgba(255,255,255,0.3);
+
+  }
+
+  #line-menu{
+    width: 3px;
+    height: 30%;
+    top: 35%;
+    background: rgba(0, 0, 0, 0.1);
+    margin-left: 22px;
+    border-radius: 20px;
+    position: absolute;
+  }
 
 	#card-artemoderna .card-gradient {
 		background-image: linear-gradient(to top right, rgba(208,47,124,0.7), rgba(252,103,103,0.7));
